Fixed anchors not hovering by adding z-index to navContainer and the particles container

--- a/src/components/ContactLeft/style.module.css
+++ b/src/components/ContactLeft/style.module.css
@@ -25,12 +25,22 @@
     width: 87%;
 }
 
+.iconsBarContact{
+    height: 100%;
+    width: 50%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-content: center;
+}
+
 .githubIcon, .linkedinIcon, .twitterIcon{
-    color: black;
-    font-size: 50px;
+    color:black;
+    font-size: 60px;
     height: 100%;
     width: 20%;
     padding:0 20px;
+    padding-bottom: 8px;
 }
 
 .githubIcon:hover, .linkedinIcon:hover, .twitterIcon:hover {
