--- a/src/components/NavBar/style.module.css
+++ b/src/components/NavBar/style.module.css
@@ -4,6 +4,7 @@
     height: 7%;
     display: flex;
     width: 100%;
+    z-index: 9999;
     position: fixed;
     top: 0;
     background-color: black;
