--- a/src/style/home.module.css
+++ b/src/style/home.module.css
@@ -132,7 +132,32 @@ body > div{
 
 }
 
-#particles-js {
+    #particles-js {
+        width: 100%;
+        height: 100%;
+        position: fixed;
+        z-index: -10;
+        top: 0;
+        left: 0
+    }
+
+    #particles-js > canvas {
+        display: block;
+        vertical-align: bottom;
+        -webkit-transform: scale(1);
+        -ms-transform: scale(1);
+        transform: scale(1);
+        z-index: -10;
+        opacity: 1;
+        -webkit-transition: opacity .8s ease, -webkit-transform 1.4s ease;
+        transition: opacity .8s ease, transform 1.4s ease
+    }
+
+
+    #tsparticles > canvas {
+        z-index: -11;
+    }
+/*#particles-js {
         position: absolute;
         width: 100%;
         height: 100%;
@@ -141,7 +166,7 @@ body > div{
         background-repeat: no-repeat;
         background-size: cover;
         background-position: 50% 50%;
-      }
+      }*/
       
       
       .count-particles{
@@ -181,8 +206,13 @@ body > div{
         top:0;
         width:100%;
         height:100%;
-        z-index: 10;
-    }   
+        z-index: -10;
+    }
+
+    .particle > div > canvas {
+            position: absolute;
+            z-index: -10;
+    }
         
 
 .homeContainer{
